Overide material kill blend file #60213

Closed
opened 2019-01-05 20:25:54 +01:00 by Siegfried Vlaminck · 5 comments

System Information
Operating system:
Graphics card:

Blender Version
Broken: c97c76c01c

Short description of error
If I save a blend file with overide material enabled, I can't open it anymore.

Exact steps for others to reproduce the error

  • Open blender, enable cycles
  • SHIFT D on the default cube,
  • In the material panel, make a single user to have 2 different materials
  • go to view layer layer tab, and choose a material to overide
  • save and close...

Then, re-open... game over!!!

**System Information** Operating system: Graphics card: **Blender Version** Broken: c97c76c01c1d **Short description of error** If I save a blend file with overide material enabled, I can't open it anymore. **Exact steps for others to reproduce the error** - Open blender, enable cycles - SHIFT D on the default cube, - In the material panel, make a single user to have 2 different materials - go to view layer layer tab, and choose a material to overide - save and close... Then, re-open... game over!!!

Added subscriber: @s.vlaminck

Added subscriber: @s.vlaminck

#60245 was marked as duplicate of this issue

#60245 was marked as duplicate of this issue

This issue was referenced by eb55990777

This issue was referenced by eb55990777a41c9135f20304365ae696fa2ce1b5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @EricButts

Added subscriber: @EricButts
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60213
No description provided.