Fix T60213: crash loading .blend file with material override.